--- a/Backend/layout-widget.css
+++ b/Backend/layout-widget.css
@@ -71,6 +71,13 @@ img {
 	border-color: #bdbdbd;
 }
 
+.item-last {
+	padding: 14px;
+	border-width: 0px 0px 0px 0px;
+	border-style:solid;
+	border-color: #bdbdbd;
+}
+
 .profile-image {
 	float:left;
 
